fix: 1px off jumping animation

--- a/src/components/box/Box.scss
+++ b/src/components/box/Box.scss
@@ -47,7 +47,7 @@ a {
 		
 		@keyframes jumpingAnimation {
 			0% { transform: translateY(-8px); }
-			100% { transform: translateY(1px); }
+			100% { transform: translateY(0px); }
 		}
 	}
 
